--- a/native-image-workshop/Dockerfile
+++ b/native-image-workshop/Dockerfile
@@ -1,3 +1,4 @@
 FROM arm64v8/alpine
-COPY target/file-count file-count
+COPY target/file-count /usr/local/bin/file-count
+RUN chmod +x /usr/local/bin/file-count
 ENTRYPOINT ["file-count"]
