--- a/native-image-workshop/Dockerfile
+++ b/native-image-workshop/Dockerfile
@@ -1,4 +1,4 @@
-FROM arm64v8/alpine
+FROM arm64v8/ubuntu
 COPY target/file-count /usr/local/bin/file-count
 RUN chmod +x /usr/local/bin/file-count
 ENTRYPOINT ["file-count"]
