--- a/native-image-workshop/Dockerfile
+++ b/native-image-workshop/Dockerfile
@@ -1,3 +1,4 @@
+# the base arch/os ( arm64v8/ubuntu ) needs to be compatible with the one used to build the executable with.
 FROM arm64v8/ubuntu
 COPY target/file-count /usr/local/bin/file-count
 RUN chmod +x /usr/local/bin/file-count
