trying to build alpine container off ubuntu by adding the --static flag to native-image via Maven. see this note:
Note: we’re using --static, so that all glibc references are statically linked, as alpine contains a different glibc implementation than the one supported by GraalVM.

--- a/native-image-workshop/Dockerfile
+++ b/native-image-workshop/Dockerfile
@@ -1,5 +1,4 @@
-# the base arch/os ( arm64v8/ubuntu ) needs to be compatible with the one used to build the executable with.
-FROM arm64v8/ubuntu
+FROM arm64v8/alpine
 COPY target/file-count /usr/local/bin/file-count
 RUN chmod +x /usr/local/bin/file-count
 ENTRYPOINT ["file-count"]
