--- a/native-image-workshop/pom.xml
+++ b/native-image-workshop/pom.xml
@@ -221,7 +221,7 @@
                                             in order to build the image
                             -->
                             <buildArgs>
-                                --no-fallback --no-server
+                                --no-fallback --no-server --static
                             </buildArgs>
                         </configuration>
                     </plugin>
